--- a/ga_sandbox/solutions/vs.net/Makefile.in
+++ b/ga_sandbox/solutions/vs.net/Makefile.in
@@ -140,6 +140,7 @@ EXTRA_DIST = \
 	chap7ex4s.vcproj \
 	chap7ex5s.vcproj \
 	chap11ex4s.vcproj \
+	chap13ex2s.vcproj \
 	chap14ex2s.vcproj
 
 all: all-am
