--- a/ga_sandbox/vs.net/chap12ex1.vcproj
+++ b/ga_sandbox/vs.net/chap12ex1.vcproj
@@ -32,7 +32,7 @@
 				Name="VCCustomBuildTool"/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="wsock32.lib glut32.lib opengl32.lib glu32.lib"
+				AdditionalDependencies="wsock32.lib glut32.lib opengl32.lib glu32.lib antlrd.lib"
 				OutputFile="$(OutDir)/chap12ex1.exe"
 				LinkIncremental="2"
 				GenerateDebugInformation="TRUE"
@@ -79,7 +79,7 @@
 				Name="VCCustomBuildTool"/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="wsock32.lib glut32.lib opengl32.lib glu32.lib"
+				AdditionalDependencies="wsock32.lib glut32.lib opengl32.lib glu32.lib antlr.lib"
 				OutputFile="$(OutDir)/chap12ex1.exe"
 				LinkIncremental="1"
 				GenerateDebugInformation="TRUE"
