--- a/ga_sandbox/screenshots/Makefile.am
+++ b/ga_sandbox/screenshots/Makefile.am
@@ -6,5 +6,9 @@ EXTRA_DIST = \
 	chap4ex1_screenshot.png \
 	chap4ex3_screenshot.png \
 	chap7ex2_screenshot.png \
-	chap7ex5_screenshot.png
+	chap7ex5_screenshot.png \
+        chap10ex3_screenshot.png \
+        chap14ex2_screenshot.png \
+        chap15ex2_screenshot.png
+
 
