--- a/ga_sandbox/solutions/vs.net/Makefile.am
+++ b/ga_sandbox/solutions/vs.net/Makefile.am
@@ -1,5 +1,5 @@
 EXTRA_DIST = \
-	solutions.sln solutions.ncb solutions.suo \
+	solutions.sln solutions.suo \
 	chap2ex2s.vcproj \
 	chap3ex2s.vcproj \
 	chap6ex1s.vcproj \
